# mars-risk

./: .gitignore  README.md  pyproject.toml  test.ipynb
.VSCodeCounter/2026-03-15_21-29-30/: details.md  diff-details.md  diff.md  diff.txt  results.json  results.md  results.txt
.VSCodeCounter/2026-03-15_21-30-21/: details.md  diff-details.md  diff.md  diff.txt  results.json  results.md  results.txt
.github/workflows/: test.yml
src/: final_selected_features_report_0323.xlsx  mars_bin_report.xlsx  mars_demo_report.xlsx  mars_feature_eval.ipynb  mars_simulation_report.xlsx  mars_simulation_report_with_missing.xlsx  test_monitor.ipynb  test_native_binner.ipynb  test_opt_binner.ipynb  test_profile_risk.ipynb  test_profiler_jupyter.ipynb  test_selector.ipynb
src/mars/: __init__.py
src/mars/analysis/: __init__.py  config.py  evaluator.py  mars_bin_report_linux.xlsx  mars_bin_report_win_mac.xlsx  profiler.py  report.py
src/mars/core/: base.py
src/mars/feature/: __init__.py  binner.py  binning.py  monitor.py  selector.py
src/mars/utils/: __init__.py  date.py  decorators.py  plotter.py  visualizer..py
