[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mars-risk"      
version = "0.0.12"       
description = "High-performance Risk Modeling Toolkit powered by Polars"
readme = "README.md"
requires-python = ">=3.10" 
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Accounting",
]
license = {file = "LICENSE"}
keywords = ["risk", "scorecard", "polars", "credit-scoring", "feature-binning", "modeling", "machine-learning"]
authors = [
  {name = "christian", email = "lee_sq001@163.com"}
]

dependencies = [
    "polars>=1.33.1",     
    "numpy>=1.24.0",      
    "pandas>=2.0.0",     
    "pyarrow>=14.0.0",    

    "scikit-learn>=1.7.0", 
    "scipy>=1.10.0",       
    "optbinning>=0.19.0",  
    
    "joblib>=1.3.0",       
    "colorlog>=6.7.0",  
    "tqdm>=4.66.0",
    "ipython",
]

# 安装命令: pip install -e ".[dev]"
[project.optional-dependencies]

# 机器学习模型支持
ml = [
    "xgboost>=3.2.0",
    "lightgbm>=4.6.0",
    "catboost>=1.2.0"
]

# 开发与测试环境
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "jupyterlab>=4.0.0",
    "matplotlib>=3.7.0",   
    "seaborn>=0.12.0",
    "tqdm>=4.66.0",        
    "psutil>=5.9.0"        
]

# 自动发现包配置
[tool.setuptools.packages.find]
where = ["src"]
include = ["mars*"]  
[tool.setuptools.package-data]
"*" = ["*.xlsx"]      